SERVER-84589 Update drop timeseries buckets collection error message (#18431)

(cherry picked from commit 09ed5a3568046863fc034463dfbd1a3fca074cd3)

GitOrigin-RevId: cdffb1121e6783578dc69a1625e86cf4e3b62045